Add new paragraph types

--- a/web/themes/dedrone/css/page_products.css
+++ b/web/themes/dedrone/css/page_products.css
@@ -99,7 +99,7 @@
   line-height: 45px;
   text-align: left;
   letter-spacing: 0;
-  color: rgb(17,17,17);
+  color: rgb(17, 17, 17);
   border-bottom-color: #bbb;
   border-style: none;
   font-weight: 100;
@@ -372,6 +372,7 @@
   margin-top: 10px;
   text-align: left;
 }
+
 /* ///////////////////////////////////////////////////// */
 
 .section_advanced_video_analytic {
@@ -398,12 +399,11 @@
   -webkit-box-direction: normal;
   -webkit-box-orient: vertical;
   -webkit-box-pack: center;
-
 }
-.field--name-field-machine-learning-video{
+
+.field--name-field-machine-learning-video {
   position: relative;
   z-index: 1;
-
 }
 
 .field--name-field-advanced-video-ima {
@@ -445,15 +445,19 @@
 .paragraph--type--advanced-video-analytics {
   max-width: 940px;
 }
+
 .field--name-field-machine-learning-video {
-  background-color: #000; }
+  background-color: #000;
+}
+
 /* //////////////////////////////////////////////////
               section  Reporting and  Forensic Evidence
 ///////////////////////////////////////////////////////// */
-.paragraph--type--page-products-reporting-and-fore{
+
+.paragraph--type--page-products-reporting-and-fore {
   -ms-align-items: flex-start;
   align-items: flex-start;
-  background-image: linear-gradient(180deg,#f05c40,#f05c40);
+  background-image: linear-gradient(180deg, #f05c40, #f05c40);
   box-sizing: border-box;
   display: -webkit-flex;
   display: -ms-flex;
@@ -471,59 +475,61 @@
   -webkit-box-direction: normal;
   -webkit-box-orient: vertical;
   -webkit-box-pack: center;
-
 }
-.div_reporting_and_forensic_evidence{
+
+.div_reporting_and_forensic_evidence {
   color: #f8f8f8;
   line-height: 26px;
-  max-width:940px ;
-  text-size-adjust:100%;
+  max-width: 940px;
+  text-size-adjust: 100%;
   margin-left: auto;
-margin-right: auto;
-z-index:2;
-
+  margin-right: auto;
+  z-index: 2;
 }
-.div_reporting_and_forensic_evidence_inside{
+
+.div_reporting_and_forensic_evidence_inside {
   margin-left: -10px;
   margin-right: -10px;
   text-align: left;
   width: 960px;
 }
-.div_inside_reporting{
+
+.div_inside_reporting {
   position: relative;
   height: 350px;
   display: block;
   width: 560px;
   float: left;
-
 }
-.field--name-field-forensic-evidence{
-float: left;
-padding-left: 10px;
-padding-right: 10px;
-width: 400px;
 
+.field--name-field-forensic-evidence {
+  float: left;
+  padding-left: 10px;
+  padding-right: 10px;
+  width: 400px;
+}
 
+.field--name-field-airspace-security-report-i {
+  position: relative;
+  z-index: 1;
 }
-.field--name-field-airspace-security-report-i{
-position: relative;
-z-index:1;
-}
-.field--name-field-airspace-security-report-i>img{
+
+.field--name-field-airspace-security-report-i>img {
   overflow: visible;
   position: absolute;
   text-align: left;
   opacity: 1;
-transform: translateX(0px) translateY(0px) translateZ(0px);
-display: block;
-transition: opacity 400ms ease 0s, transform 400ms ease 0s;
-left: 0;
-z-index:1;
+  transform: translateX(0px) translateY(0px) translateZ(0px);
+  display: block;
+  transition: opacity 400ms ease 0s, transform 400ms ease 0s;
+  left: 0;
+  z-index: 1;
 }
-.field--name-field-forensic-evidence >h2{
+
+.field--name-field-forensic-evidence>h2 {
   clear: none;
   flex: 0 auto;
-color: rgb(230,217,217);
+  color: rgb(230, 217, 217);
   border-style: none;
   width: auto;
   margin-top: 0;
@@ -543,39 +549,40 @@ color: rgb(230,217,217);
   text-transform: none;
   margin-bottom: 10px;
 }
-.field--name-field-forensic-evidence>h5{
-clear: none;
-display: inline-block;
-float:none;
-font-size: 16px;
-font-weight: 300;
-line-height: 24px;
-margin-bottom: 20px;
-margin-top: 20px;
 
+.field--name-field-forensic-evidence>h5 {
+  clear: none;
+  display: inline-block;
+  float: none;
+  font-size: 16px;
+  font-weight: 300;
+  line-height: 24px;
+  margin-bottom: 20px;
+  margin-top: 20px;
 }
-.field--name-field-forensic-evidence>p{
+
+.field--name-field-forensic-evidence>p {
   margin-top: 15px;
   margin-bottom: 0px;
 }
-.field--name-field-forensic-evidence>p> a{
-  background-color: rgba(0,0,0,0);
-  color: rgb(255,255,255);
-cursor: pointer;
-font-size: 16px;
 
+.field--name-field-forensic-evidence>p>a {
+  background-color: rgba(0, 0, 0, 0);
+  color: rgb(255, 255, 255);
+  cursor: pointer;
+  font-size: 16px;
 }
+
 /* ////////////////////////////////////////////////////////
           section Cloud-Managed Airspace Security
 ///////////////////////////////////////////////////////// */
 
-
-.paragraph--type--page-products-cloud-managed-airs{
+.paragraph--type--page-products-cloud-managed-airs {
   -ms-align-items: flex-start;
   align-items: flex-start;
-  background-image: linear-gradient(180deg,#0a0c15,#0a0c15);
+  background-image: linear-gradient(180deg, #0a0c15, #0a0c15);
   box-sizing: border-box;
-  color: rgb(248,248,248);
+  color: rgb(248, 248, 248);
   display: block;
   -webkit-flex-direction: column;
   -ms-flex-direction: column;
@@ -590,50 +597,52 @@ font-size: 16px;
   -webkit-box-direction: normal;
   -webkit-box-orient: vertical;
   -webkit-box-pack: center;
-
 }
-.section_cloud_managed_airspace_security{
+
+.section_cloud_managed_airspace_security {
   margin-left: auto;
   margin-right: auto;
   max-width: 940px;
   height: 310px;
-
 }
-.field--name-field-page-products-dedrone-clou{
-  max-width:100%;
+
+.field--name-field-page-products-dedrone-clou {
+  max-width: 100%;
   opacity: 1;
   overflow: hidden;
   position: absolute;
   right: -100px;
   vertical-align: middle;
   transform: translateX(0px) translateY(0px) translateZ(0px);
-    display: block;
-    transition: opacity 400ms ease 0s, transform 400ms ease 0s;
-    border: 0;
+  display: block;
+  transition: opacity 400ms ease 0s, transform 400ms ease 0s;
+  border: 0;
 }
-.section_cloud_managed_include{
+
+.section_cloud_managed_include {
   margin-left: -10px;
   margin-right: -10px;
 }
-.field--name-field-cloud-managed-airspace-sec{
+
+.field--name-field-cloud-managed-airspace-sec {
   float: left;
   padding-left: 10px;
   padding-right: 10px;
   position: relative;
   width: 400px;
 }
-.field--name-field-cloud-managed-airspace-sec>h2{
 
+.field--name-field-cloud-managed-airspace-sec>h2 {
   margin-top: 0px;
   font-size: 40px;
   font-weight: 200;
   letter-spacing: normal;
   line-height: 45px;
   margin-bottom: 10px;
-
 }
-.field--name-field-cloud-managed-airspace-sec>p{
-  font-family: 'Pluto Sans Condensed Extra Light',sans-serif;
+
+.field--name-field-cloud-managed-airspace-sec>p {
+  font-family: 'Pluto Sans Condensed Extra Light', sans-serif;
   clear: none;
   float: none;
   font-size: 16px;
@@ -642,16 +651,17 @@ font-size: 16px;
   list-style-type: disc;
   margin-bottom: 20px;
   margin-top: 20px;
-
 }
-  /* /////////////////////////////////////////////////////
+
+/* /////////////////////////////////////////////////////
                       section Additional security
   //////////////////////////////////////////////////// */
-.section_additional_security{
+
+.section_additional_security {
   align-items: flex-start;
-  background-image: linear-gradient(180deg,#fff,#fff);
+  background-image: linear-gradient(180deg, #fff, #fff);
   box-sizing: border-box;
-  color: rgb(248,248,248);
+  color: rgb(248, 248, 248);
   display: block;
   flex-direction: column;
   flex-wrap: nowrap;
@@ -660,12 +670,13 @@ font-size: 16px;
   padding-top: 150px;
   text-align: left;
   text-size-adjust: 100%;
-  -webkit-box-align:start;
+  -webkit-box-align: start;
   -webkit-box-direction: normal;
   -webkit-box-orient: vertical;
   -webkit-box-pack: center;
 }
-.paragraph--type---page-products-additional-securi{
+
+.paragraph--type---page-products-additional-securi {
   -ms-align-items: center;
   align-items: center;
   display: flex;
@@ -676,7 +687,8 @@ font-size: 16px;
   -webkit-box-align: center;
   -webkit-box-pack: center;
 }
-.field--name-field-additional-securit{
+
+.field--name-field-additional-securit {
   float: none;
   line-height: 26px;
   min-height: 1px;
@@ -685,21 +697,23 @@ font-size: 16px;
   position: relative;
   width: 400px;
 }
-.field--name-field-additional-security-image{
+
+.field--name-field-additional-security-image {
   float: none;
   padding-left: 10px;
   padding-right: 10px;
   position: relative;
   width: 480px;
 }
-.field--name-field-additional-securit > h2{
-  border-bottom-color: rgb(187,187,187);
+
+.field--name-field-additional-securit>h2 {
+  border-bottom-color: rgb(187, 187, 187);
   border-bottom-style: none;
   border-bottom-width: 0px;
   border-left-style: none;
   border-right-style: none;
   border-top-style: none;
-  color: rgb(17,17,17);
+  color: rgb(17, 17, 17);
   letter-spacing: normal;
   line-height: 45px;
   margin-bottom: 10px;
@@ -707,7 +721,8 @@ font-size: 16px;
   text-transform: none;
   font-weight: 200;
 }
-.field--name-field-additional-securit > h6{
+
+.field--name-field-additional-securit>h6 {
   clear: none;
   display: inline-block;
   float: none;
@@ -716,28 +731,29 @@ font-size: 16px;
   line-height: 24px;
   margin-bottom: 5px;
   margin-top: 10px;
-  color: rgb(17,17,17);
+  color: rgb(17, 17, 17);
 }
-.field--name-field-additional-securit > p{
-margin-bottom: 0px;
-cursor: pointer;
-margin-top: 15px;
-text-align: left;
-text-decoration: rgb(0,158,227);
-text-decoration: none;
-text-decoration-style: solid;
+
+.field--name-field-additional-securit>p {
+  margin-bottom: 0px;
+  cursor: pointer;
+  margin-top: 15px;
+  text-align: left;
+  text-decoration: rgb(0, 158, 227);
+  text-decoration: none;
+  text-decoration-style: solid;
 }
 
 /* //////////////////////////////////////
               section Mitigation
 //////////////////////////////////////////// */
 
-.section_mitigation{
+.section_mitigation {
   -ms-align-items: flex-start;
   align-items: flex-start;
-  background-image: linear-gradient(180deg,#011d2a,#011d2a);
+  background-image: linear-gradient(180deg, #011d2a, #011d2a);
   box-sizing: border-box;
-  color: rgb(248,248,248);
+  color: rgb(248, 248, 248);
   display: block;
   -webkit-flex-direction: column;
   -ms-flex-direction: column;
@@ -749,12 +765,13 @@ text-decoration-style: solid;
   -ms-text-align-last: auto;
   text-align: left;
   text-size-adjust: 100%;
-  -webkit-box-align:start;
+  -webkit-box-align: start;
   -webkit-box-direction: normal;
   -webkit-box-orient: vertical;
   -webkit-box-pack: center;
 }
-.paragraph--type--page-products-mitigation{
+
+.paragraph--type--page-products-mitigation {
   -ms-align-items: center;
   align-items: center;
   display: -webkit-flex;
@@ -764,29 +781,32 @@ text-decoration-style: solid;
   margin-left: -10px;
   margin-right: -10px;
   text-align: left;
-  -webkit-box-align:start;
+  -webkit-box-align: start;
   -webkit-box-pack: center;
 }
-.field--name-field-page-products-mitigation-i{
-float: none;
-padding-left: 10px;
-padding-right: 10px;
-position: relative;
-width: 480px;
-}
-.field--name-field-page-products-mitigation-i > img{
-width: 460px;
-height: 306px;
-}
-.field--name-field-page-products-mitigation-t{
+
+.field--name-field-page-products-mitigation-i {
   float: none;
   padding-left: 10px;
   padding-right: 10px;
   position: relative;
   width: 480px;
-
 }
-.field--name-field-page-products-mitigation-t> h2{
+
+.field--name-field-page-products-mitigation-i>img {
+  width: 460px;
+  height: 306px;
+}
+
+.field--name-field-page-products-mitigation-t {
+  float: none;
+  padding-left: 10px;
+  padding-right: 10px;
+  position: relative;
+  width: 480px;
+}
+
+.field--name-field-page-products-mitigation-t>h2 {
   flex-basis: auto;
   flex-grow: 0;
   flex-shrink: 1;
@@ -799,13 +819,12 @@ height: 306px;
   text-transform: none;
   width: 460px;
   -webkit-box-flex: 0;
-  border-bottom-color: rgb(187,187,187);
+  border-bottom-color: rgb(187, 187, 187);
   border-style: none;
   border-bottom-width: 0px;
-
-
 }
-.field--name-field-page-products-mitigation-t> h5{
+
+.field--name-field-page-products-mitigation-t>h5 {
   clear: none;
   display: inline-block;
   float: none;
@@ -817,13 +836,90 @@ height: 306px;
   margin-top: 20px;
   text-align: left;
   width: 460px;
-  color: rgb(255,255,255);
-
+  color: rgb(255, 255, 255);
 }
-.field--name-field-page-products-mitigation-t> h5> a{
+
+.field--name-field-page-products-mitigation-t>h5>a {
   cursor: pointer;
   font-weight: 400;
   margin-top: 15px;
-  color: rgb(255,255,255);
+  color: rgb(255, 255, 255);
+}
 
+/* ///////////////////////////////////////////////////////////////////////////
+section Want to learn more
+///////////////////////////////////////////////////////////// */
+
+.paragraph--type--section-want-to-learn-more {
+  background-image: linear-gradient(180deg, #f05c40, #f05c40);
+  padding-top: 150px;
+  padding-bottom: 150px;
+  box-sizing: border-box;
+}
+
+.field--name-field-label-want-to-learn-more- {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 940px;
+}
+
+.field--name-field-label-want-to-learn-more- h1 {
+  position: relative;
+  flex-grow: 1;
+  flex-basis: auto;
+  flex-shrink: 1;
+  width: auto;
+  margin-top: 10px;
+  padding-top: 5px;
+  text-align: center;
+  flex: 0 auto;
+  color: #fff;
+  border-style: none;
+  padding-bottom: 0;
+  border-bottom-width: 0;
+  font-family: 'Pluto Sans Condensed Extra Light', sans-serif;
+  font-size: 40px;
+  line-height: 45px;
+  letter-spacing: 0;
+  border-bottom-color: #bbb;
+  font-weight: 200;
+  text-transform: none;
+  margin-bottom: 10px;
+}
+
+.field--name-field-label-want-to-learn-more- blockquote {
+  color: rgb(129, 129, 129);
+  display: block;
+  margin-top: 25px;
+  text-align: center;
+  margin-bottom: 0px;
+}
+
+.field--name-field-label-want-to-learn-more- blockquote p {
+  text-align: center;
+  min-width: 220px;
+  margin-right: 10px;
+  margin-left: 10px;
+  border-color: #fff;
+  background-color: transparent;
+  background-image: none;
+  color: #fff;
+  border: 1px solid ;
+  display: inline-block;
+  margin-top: 20px;
+  margin-bottom: 10px;
+  padding: 15px 50px;
+  border-radius: 4px;
+  font-family: 'Pluto Sans Condensed Regular', sans-serif;
+
+  font-size: 12px;
+  line-height: 15px;
+  font-weight: 400;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  text-decoration: none;
+  cursor: pointer;
+}
+.field--name-field-label-want-to-learn-more- blockquote p a{
+  color: #fff;
 }
