--- a/web/themes/dedrone/scss/styles.scss
+++ b/web/themes/dedrone/scss/styles.scss
@@ -10,6 +10,7 @@
 // Import Components
 @import 'blocks/header';
 @import 'blocks/tabs';
+@import 'blocks/forms';
 @import 'blocks/home-main-slider';
 @import 'blocks/benefits-trio';
 @import 'blocks/text-columns';
