add and customize case study block for secondary customer`s pages

--- a/web/themes/dedrone/scss/styles.scss
+++ b/web/themes/dedrone/scss/styles.scss
@@ -25,6 +25,7 @@
 @import 'blocks/buttons-section';
 @import 'blocks/webinars-section';
 @import 'blocks/cta-section';
+@import 'blocks/case-studies-paragraph';
 
 @import 'blocks/footer_menu';
 @import 'blocks/footer';
