--- a/web/themes/dedrone/css/styles.css
+++ b/web/themes/dedrone/css/styles.css
@@ -7703,6 +7703,40 @@ a {
       background: #fff;
       color: #f05c40; }
 
+.case-studies-paragraph {
+  padding: 150px 0;
+  background-image: linear-gradient(180deg, #f8f8f8, #f8f8f8); }
+  .case-studies-paragraph .content-wrap {
+    text-align: center;
+    padding-bottom: 100px; }
+    .case-studies-paragraph .content-wrap h2 {
+      font-size: 40px;
+      line-height: 45px;
+      color: #111111; }
+    .case-studies-paragraph .content-wrap p {
+      font-size: 20px;
+      line-height: 24px;
+      color: #111111;
+      margin-top: 25px; }
+  .case-studies-paragraph .view-case-studies {
+    margin: 0 -30px; }
+    .case-studies-paragraph .view-case-studies .case-study-element-wrap {
+      min-height: 280px;
+      margin-top: 0;
+      padding-right: 0;
+      padding-bottom: 20px;
+      padding-left: 0;
+      border-radius: 2px;
+      background-image: linear-gradient(180deg, #fff, #fff);
+      box-shadow: none; }
+      .case-studies-paragraph .view-case-studies .case-study-element-wrap .views-field-field-secondary-page-kink a {
+        padding: 20px 20px 0 20px;
+        color: #111;
+        font-size: 15px;
+        line-height: 20px;
+        font-weight: 500;
+        text-decoration: none; }
+
 /* ==========================================================================
    Footer menu region style sheets.
    ========================================================================== */
