Updated Data Base and bug fixing

--- a/web/themes/dedrone/templates/page.html.twig
+++ b/web/themes/dedrone/templates/page.html.twig
@@ -39,7 +39,7 @@
 
 {{ page.header }}
  
-{{ page.content }}
+{{ page.content|without('dedrone_page_title') }}
         
 {% if page.footerMenu %}
     {{ page.footerMenu }}
