--- a/web/themes/dedrone/templates/paragraph/paragraph--slider--classic-slider.html.twig
+++ b/web/themes/dedrone/templates/paragraph/paragraph--slider--classic-slider.html.twig
@@ -49,7 +49,7 @@
 <section class='{{ content.css_class }}'>
 {% block paragraph %}
   <div{{ attributes.addClass(classes) }}>
-    <div class="container">
+    <div class="">
       <div class="slider-wrap">
         <div class="swiper-container">
             {% block content %}
