Add new paragraphs and templetes to page videos and mitigation

--- a/web/themes/dedrone/scss/styles.scss
+++ b/web/themes/dedrone/scss/styles.scss
@@ -12,6 +12,8 @@
 @import 'blocks/_footer_menu';
 @import 'blocks/_footer';
 @import 'blocks/products_software.scss';
+@import 'blocks/products_videos';
+@import 'blocks/products_mitigation';
 
 // Import Layouts
 // @import 'layouts/home';
