--- a/web/themes/dedrone/templates/paragraph/paragraph--background-image-and-text-right-.html.twig
+++ b/web/themes/dedrone/templates/paragraph/paragraph--background-image-and-text-right-.html.twig
@@ -1,19 +1,18 @@
-
 {%
   set classes = [
     'paragraph',
-    'fucking world',
     'paragraph--type--' ~ paragraph.bundle|clean_class,
     view_mode ? 'paragraph--view-mode--' ~ view_mode|clean_class,
     not paragraph.isPublished() ? 'paragraph--unpublished'
   ]
 %}
-<div class="section_advanced_video_analytic">
+<section class="section_mitigation_mantle" style="background:url({{ background_image_url }}) no-repeat center top; background-position: 50% 50%;background-size: cover;">
   {% block paragraph %}
     <div{{ attributes.addClass(classes) }}>
+      
       {% block content %}
         {{ content }}
       {% endblock %}
     </div>
   {% endblock paragraph %}
-</div>
+</section>
