--- a/web/themes/dedrone/templates/paragraph/paragraph--featured-videos.html.twig
+++ b/web/themes/dedrone/templates/paragraph/paragraph--featured-videos.html.twig
@@ -7,12 +7,12 @@
     not paragraph.isPublished() ? 'paragraph--unpublished'
   ]
 %}
-<div class="section_additional_security">
-  {% block paragraph %}
-    <div{{ attributes.addClass(classes) }}>
-      {% block content %}
-        {{ content }}
-      {% endblock %}
-    </div>
-  {% endblock paragraph %}
-</div>
+<section class="section_videos">
+{% block paragraph %}
+  <div{{ attributes.addClass(classes) }}>
+    {% block content %}
+      {{ content }}
+    {% endblock %}
+  </div>
+{% endblock paragraph %}
+</section>
