--- a/web/themes/dedrone/scss/styles.scss
+++ b/web/themes/dedrone/scss/styles.scss
@@ -28,6 +28,8 @@
 @import 'blocks/cta-section';
 @import 'blocks/case-studies-paragraph';
 @import 'blocks/products_videos';
+@import 'blocks/tabs_page_Mitigation';
+@import 'blocks/page_hardware';
 
 @import 'paragraph/technology_partners';
 @import 'paragraph/shared';
